Avatar was changed

--- a/www/app/maintimeline/maintimeline.html
+++ b/www/app/maintimeline/maintimeline.html
@@ -27,7 +27,7 @@
                   <icon heart></icon>
                 </button>
                 <ion-avatar item-left="" style="position: absolute; right: 0; bottom: -38px; z-index: 3;">
-                  <img (click)="showProfile()" src="http://ionicframework.com/docs/v2/components/demo/img/marty-avatar.png" style="max-width: 6rem; max-height: 6rem; border-radius: 6rem;">
+                  <img (click)="showProfile()" src="https://avatars.githubusercontent.com/u/5776988?v=3" style="max-width: 6rem; max-height: 6rem; border-radius: 6rem;">
                 </ion-avatar>
               </div>
               <ion-item>
