--- a/www/app/timelinehairdresser/timelinehairdresser.html
+++ b/www/app/timelinehairdresser/timelinehairdresser.html
@@ -12,7 +12,7 @@
          <ion-card>
            <ion-item class="item">
              <ion-avatar item-left="">
-               <img src="http://ionicframework.com/docs/v2/components/demo/img/marty-avatar.png" (click)="showProfile()" />
+               <img src="https://avatars.githubusercontent.com/u/5776988?v=3" (click)="showProfile()" />
              </ion-avatar>
              <ion-item-content>
              <h2>Marty McFly</h2>
